css/layout.css
.modal {
  transition: opacity 0.25s ease;
}

body.modal-active {
  overflow-x: hidden;
  overflow-y: visible !important;
}

.profile-dd--hidden .profile-dd__inner__menu {
  display: none;
}

.profile-dd--shown .profile-dd__inner {
  @apply border-indigo-700;
}

.profile-dd--shown .profile-dd__inner__menu {
  display: block;
}

.profile-dd--shown .bi-chevron-down {
  transform: rotate(180deg);
}

@media (prefers-color-scheme: dark) {
  .profile-dd--shown .profile-dd__inner {
    @apply bg-gray-800;
  }
}

.modal {
  transition: opacity 0.25s ease;
}
body.modal-active {
  overflow-x: hidden;
  overflow-y: visible !important;
}

.post-cover-image img {
  object-fit: cover;
}

/* Spinner css */

.lds-ring {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border-width: 8px;
  border-style: solid;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

